Methods Translations/HW 4/src/grammerParser/GrammerParserParser.java
// Generated from /Users/egor.bazhenov/Generator/src/grammerParser/GrammerParser.g4 by ANTLR 4.9
package grammerParser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammerParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		GRAMMAR=1, IMPORT=2, HEADER=3, FIELDS=4, GLOBALS=5, PACKAGE=6, SKIP_RULE=7, 
		POINT=8, COMMA=9, OR=10, COLON=11, SEMICOLON=12, STAR=13, OPEN_BRACKET=14, 
		CLOSE_BRACKET=15, SQUARE_OPEN=16, SQUARE_CLOSE=17, EQUALS=18, FIGURE_OPEN=19, 
		FIGURE_CLOSE=20, MORE_RULE=21, LESS=22, TOKEN=23, NAME=24, TYPE=25, REGEX=26, 
		CODE=27, FUNC_ARGUMENT=28, WHITESPACE=29;
	public static final int
		RULE_grammarParser = 0, RULE_parserName = 1, RULE_header = 2, RULE_globals = 3, 
		RULE_global = 4, RULE_fields = 5, RULE_field = 6, RULE_parserRules = 7, 
		RULE_principle = 8, RULE_token = 9, RULE_grammerRule = 10, RULE_constructor = 11, 
		RULE_contentRule = 12, RULE_name = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"grammarParser", "parserName", "header", "globals", "global", "fields", 
			"field", "parserRules", "principle", "token", "grammerRule", "constructor", 
			"contentRule", "name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'grammar'", "'import'", "'header'", "'fields'", "'globals'", "'package'", 
			"'-> skip'", "'.'", "','", "'|'", "':'", "';'", "'*'", "'('", "')'", 
			"'['", "']'", "'='", "'{'", "'}'", "'>'", "'<'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "GRAMMAR", "IMPORT", "HEADER", "FIELDS", "GLOBALS", "PACKAGE", 
			"SKIP_RULE", "POINT", "COMMA", "OR", "COLON", "SEMICOLON", "STAR", "OPEN_BRACKET", 
			"CLOSE_BRACKET", "SQUARE_OPEN", "SQUARE_CLOSE", "EQUALS", "FIGURE_OPEN", 
			"FIGURE_CLOSE", "MORE_RULE", "LESS", "TOKEN", "NAME", "TYPE", "REGEX", 
			"CODE", "FUNC_ARGUMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GrammerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammerParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GrammarParserContext extends ParserRuleContext {
		public ParserNameContext parserName() {
			return getRuleContext(ParserNameContext.class,0);
		}
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public ParserRulesContext parserRules() {
			return getRuleContext(ParserRulesContext.class,0);
		}
		public GlobalsContext globals() {
			return getRuleContext(GlobalsContext.class,0);
		}
		public FieldsContext fields() {
			return getRuleContext(FieldsContext.class,0);
		}
		public GrammarParserContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarParser; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterGrammarParser(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitGrammarParser(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitGrammarParser(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarParserContext grammarParser() throws RecognitionException {
		GrammarParserContext _localctx = new GrammarParserContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grammarParser);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			parserName();
			setState(29);
			header();
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GLOBALS) {
				{
				setState(30);
				globals();
				}
			}

			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FIELDS) {
				{
				setState(33);
				fields();
				}
			}

			setState(36);
			parserRules();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParserNameContext extends ParserRuleContext {
		public TerminalNode GRAMMAR() { return getToken(GrammerParserParser.GRAMMAR, 0); }
		public TerminalNode NAME() { return getToken(GrammerParserParser.NAME, 0); }
		public ParserNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parserName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterParserName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitParserName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitParserName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParserNameContext parserName() throws RecognitionException {
		ParserNameContext _localctx = new ParserNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parserName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(GRAMMAR);
			setState(39);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode HEADER() { return getToken(GrammerParserParser.HEADER, 0); }
		public TerminalNode CODE() { return getToken(GrammerParserParser.CODE, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(HEADER);
			setState(42);
			match(CODE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalsContext extends ParserRuleContext {
		public TerminalNode GLOBALS() { return getToken(GrammerParserParser.GLOBALS, 0); }
		public TerminalNode SQUARE_OPEN() { return getToken(GrammerParserParser.SQUARE_OPEN, 0); }
		public TerminalNode SQUARE_CLOSE() { return getToken(GrammerParserParser.SQUARE_CLOSE, 0); }
		public List<GlobalContext> global() {
			return getRuleContexts(GlobalContext.class);
		}
		public GlobalContext global(int i) {
			return getRuleContext(GlobalContext.class,i);
		}
		public GlobalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterGlobals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitGlobals(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitGlobals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalsContext globals() throws RecognitionException {
		GlobalsContext _localctx = new GlobalsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_globals);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(GLOBALS);
			setState(45);
			match(SQUARE_OPEN);
			setState(47); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(46);
				global();
				}
				}
				setState(49); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NAME );
			setState(51);
			match(SQUARE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GrammerParserParser.NAME, 0); }
		public TerminalNode EQUALS() { return getToken(GrammerParserParser.EQUALS, 0); }
		public TerminalNode TYPE() { return getToken(GrammerParserParser.TYPE, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammerParserParser.SEMICOLON, 0); }
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitGlobal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitGlobal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_global);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(NAME);
			setState(54);
			match(EQUALS);
			setState(55);
			match(TYPE);
			setState(56);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldsContext extends ParserRuleContext {
		public TerminalNode FIELDS() { return getToken(GrammerParserParser.FIELDS, 0); }
		public TerminalNode SQUARE_OPEN() { return getToken(GrammerParserParser.SQUARE_OPEN, 0); }
		public TerminalNode SQUARE_CLOSE() { return getToken(GrammerParserParser.SQUARE_CLOSE, 0); }
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public FieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fields; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterFields(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitFields(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitFields(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldsContext fields() throws RecognitionException {
		FieldsContext _localctx = new FieldsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fields);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(FIELDS);
			setState(59);
			match(SQUARE_OPEN);
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60);
				field();
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NAME );
			setState(65);
			match(SQUARE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(GrammerParserParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GrammerParserParser.NAME, i);
		}
		public TerminalNode EQUALS() { return getToken(GrammerParserParser.EQUALS, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammerParserParser.SEMICOLON, 0); }
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(NAME);
			setState(68);
			match(EQUALS);
			setState(69);
			match(NAME);
			setState(70);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParserRulesContext extends ParserRuleContext {
		public List<PrincipleContext> principle() {
			return getRuleContexts(PrincipleContext.class);
		}
		public PrincipleContext principle(int i) {
			return getRuleContext(PrincipleContext.class,i);
		}
		public ParserRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parserRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterParserRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitParserRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitParserRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParserRulesContext parserRules() throws RecognitionException {
		ParserRulesContext _localctx = new ParserRulesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_parserRules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72);
				principle();
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TOKEN || _la==NAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrincipleContext extends ParserRuleContext {
		public TokenContext token() {
			return getRuleContext(TokenContext.class,0);
		}
		public GrammerRuleContext grammerRule() {
			return getRuleContext(GrammerRuleContext.class,0);
		}
		public PrincipleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_principle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterPrinciple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitPrinciple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitPrinciple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrincipleContext principle() throws RecognitionException {
		PrincipleContext _localctx = new PrincipleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_principle);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TOKEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				token();
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				grammerRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokenContext extends ParserRuleContext {
		public TerminalNode TOKEN() { return getToken(GrammerParserParser.TOKEN, 0); }
		public TerminalNode COLON() { return getToken(GrammerParserParser.COLON, 0); }
		public TerminalNode REGEX() { return getToken(GrammerParserParser.REGEX, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammerParserParser.SEMICOLON, 0); }
		public TerminalNode CODE() { return getToken(GrammerParserParser.CODE, 0); }
		public TerminalNode SKIP_RULE() { return getToken(GrammerParserParser.SKIP_RULE, 0); }
		public TokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_token; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterToken(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitToken(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitToken(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TokenContext token() throws RecognitionException {
		TokenContext _localctx = new TokenContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_token);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(TOKEN);
			setState(82);
			match(COLON);
			setState(83);
			match(REGEX);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CODE) {
				{
				setState(84);
				match(CODE);
				}
			}

			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SKIP_RULE) {
				{
				setState(87);
				match(SKIP_RULE);
				}
			}

			setState(90);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammerRuleContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(GrammerParserParser.NAME, 0); }
		public TerminalNode COLON() { return getToken(GrammerParserParser.COLON, 0); }
		public ContentRuleContext contentRule() {
			return getRuleContext(ContentRuleContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(GrammerParserParser.SEMICOLON, 0); }
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public GrammerRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammerRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterGrammerRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitGrammerRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitGrammerRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammerRuleContext grammerRule() throws RecognitionException {
		GrammerRuleContext _localctx = new GrammerRuleContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_grammerRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(NAME);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SQUARE_OPEN) {
				{
				setState(93);
				constructor();
				}
			}

			setState(96);
			match(COLON);
			setState(97);
			contentRule(0);
			setState(98);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorContext extends ParserRuleContext {
		public TerminalNode SQUARE_OPEN() { return getToken(GrammerParserParser.SQUARE_OPEN, 0); }
		public List<TerminalNode> NAME() { return getTokens(GrammerParserParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(GrammerParserParser.NAME, i);
		}
		public List<TerminalNode> COLON() { return getTokens(GrammerParserParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(GrammerParserParser.COLON, i);
		}
		public TerminalNode SQUARE_CLOSE() { return getToken(GrammerParserParser.SQUARE_CLOSE, 0); }
		public TerminalNode SEMICOLON() { return getToken(GrammerParserParser.SEMICOLON, 0); }
		public ConstructorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterConstructor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitConstructor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitConstructor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructorContext constructor() throws RecognitionException {
		ConstructorContext _localctx = new ConstructorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_constructor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(SQUARE_OPEN);
			setState(101);
			match(NAME);
			setState(102);
			match(COLON);
			setState(103);
			match(NAME);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(104);
				match(SEMICOLON);
				setState(105);
				match(NAME);
				setState(106);
				match(COLON);
				setState(107);
				match(NAME);
				}
			}

			setState(110);
			match(SQUARE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContentRuleContext extends ParserRuleContext {
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public TerminalNode CODE() { return getToken(GrammerParserParser.CODE, 0); }
		public List<ContentRuleContext> contentRule() {
			return getRuleContexts(ContentRuleContext.class);
		}
		public ContentRuleContext contentRule(int i) {
			return getRuleContext(ContentRuleContext.class,i);
		}
		public TerminalNode OR() { return getToken(GrammerParserParser.OR, 0); }
		public ContentRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contentRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).enterContentRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammerParserListener ) ((GrammerParserListener)listener).exitContentRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammerParserVisitor ) return ((GrammerParserVisitor<? extends T>)visitor).visitContentRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentRuleContext contentRule() throws RecognitionException {
		return contentRule(0);
	}
